--- a/src/packages/MA/package.json
+++ b/src/packages/MA/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "solid-crt",
-  "private": true,
+  "name": "cf",
   "version": "1.0.0",
   "description": "",
-  "workspaces": [
-    "./src/packages/*"
-  ],
   "main": "index.js",
   "scripts": {
-    "dev": "npx tsc && node dist/bin index.js",
-    "lint": "eslint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.26.0",
-    "eslint-config-standard": "^17.0.0"
+    "typescript": "^4.8.4",
+    "nodemon": "^2.0.20"
   }
 }
