--- a/src/app/package.json
+++ b/src/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "solid-credit",
+  "name": "cf",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,12 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Angel Ortega",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
     "typescript": "^4.8.4",
-    "nodemon": "^2.0.20",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "nodemon": "^2.0.20"
   }
 }
