--- a/src/packages/MA/package.json
+++ b/src/packages/MA/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "typescript": "^4.8.4",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
