--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
         "node":true,
         "es6": true
     },
-    "extends": "standard",
+    "extends": "",
     "rules": {
         "semi": ["error", "always"],
         "no-unused-vars":"off" 
