--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -42,7 +42,7 @@ jobs:
           extended: true
 
       - name: Build
-        run: hugo --minify
+        run: npm run build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
