--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -47,9 +47,13 @@ jobs:
 
       - name: Install
         run: npm install
+        
+      - name: ls
+        run: ls
 
       - name: Build
         run: npm run build
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
