Update Hugo workflow to deploy Doks site to GitHub Pages

--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,30 +1,8 @@
-# Sample workflow for building and deploying a Hugo site to GitHub Pages
-name: Deploy Hugo site to Pages
+name: Deploy Doks site to GitHub Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["gh-pages"]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
-# Default to bash
-defaults:
-  run:
-    shell: bash
+    branches: ["docs"]  # Esto se activará cuando hagas push a la rama 'docs'
 
 jobs:
   build-and-deploy:
@@ -33,30 +11,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          submodules: true  # Importante si estás usando submódulos
+          submodules: true  # Importante para los temas de Hugo como submódulos
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: '0.120.4'
           extended: true
-      - name: node
-        uses: actions/setup-node@v2
-        with:
-          node-version: '20'
-
-      - name: Install
-        run: npm install
-        
-      - name: ls
-        run: ls
 
       - name: Build
-        run: npm run build
+        run: hugo --minify
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
-          publish_branch: gh-pages  # Aquí especificas que el contenido de 'public' se debe publicar en 'gh-pages'
+          publish_branch: gh-pages  # Esto desplegará en 'gh-pages'
+          
