--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -3,6 +3,22 @@ name: Deploy Doks site to GitHub Pages
 on:
   push:
     branches: ["docs"]  # Esto se activará cuando hagas push a la rama 'docs'
+    # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
+# Default to bash
+defaults:
+  run:
+    shell: bash
 
 jobs:
   build-and-deploy:
@@ -28,4 +44,3 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
           publish_branch: gh-pages  # Esto desplegará en 'gh-pages'
-          
