--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,9 +1,15 @@
-name: Deploy Doks site to GitHub Pages
+# Sample workflow for building and deploying a Hugo site to GitHub Pages
+name: Deploy Hugo site to Pages
 
 on:
+  # Runs on pushes targeting the default branch
   push:
-    branches: ["docs"]  # Esto se activará cuando hagas push a la rama 'docs'
-    # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+    branches: ["gh-pages"]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
