--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -27,26 +27,40 @@ defaults:
     shell: bash
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: setup node
+        uses: actions/setup-node@v2
         with:
-          submodules: true  # Importante para los temas de Hugo como submódulos
-
-      - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v2
-        with:
-          hugo-version: '0.120.4'
-          extended: true
-
+          node-version: '20'
+      - name: Install Hugo
+        run: npm install 
       - name: Build
-        run: pnpm install && hugo --minify      
+        run: npm run build      
 
-      - name: Deploy to GitHub Pages
+      - name: artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: site
+          path: public
+  deployd:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:      
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: site
+          path: public
+      - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          personal_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
-          publish_branch: gh-pages  # Esto desplegará en 'gh-pages'
+          publish_branch: docs
+          force_orphan: true          
+          enable_jekyll: false
+          commit_message: ${{ github.event.head_commit.message }}          
