--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,5 +1,5 @@
 # Sample workflow for building and deploying a Hugo site to GitHub Pages
-name: Deploy Hugo site to Pages
+name: Deploy Hugo site to Pages2
 
 on:
   # Runs on pushes targeting the default branch
@@ -57,12 +57,9 @@ jobs:
         with:
           name: site
           path: public
+          
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          personal_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
-          publish_branch: docs
-          force_orphan: true          
-          enable_jekyll: false
-          commit_message: ${{ github.event.head_commit.message }}      
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public   
