--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,30 +1,9 @@
-# Sample workflow for building and deploying a Hugo site to GitHub Pages
-name: Deploy Hugo site to Pages2
+name: Build Hugo Site
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: ["docs"]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
-# Default to bash
-defaults:
-  run:
-    shell: bash
 
 jobs:
   build:
@@ -32,34 +11,22 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-      - name: setup node
+
+      - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '20'
-      - name: Install Hugo
-        run: npm install 
-      - name: checkout package.json
-        run: cat package.json        
-      - name: Build
-        run: npm run build      
 
-      - name: artifact
+      - name: Setup Hugo
+        run: |
+          wget https://github.com/gohugoio/hugo/releases/download/v0.120.4/hugo_0.120.4_Linux-64bit.deb
+          sudo dpkg -i hugo_0.120.4_Linux-64bit.deb
+
+      - name: Build site
+        run: hugo --minify
+
+      - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
           name: site
           path: public
-  deployd:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:      
-      - name: Download artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: site
-          path: public
-          
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public   
