add ls name static.yml

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -57,6 +57,9 @@ jobs:
           with:
             name: site
             path: public
+            
+        - name : checkout public
+          run: ls public
 
         - name: Deploy
           uses: peaceiris/actions-gh-pages@v3
