update config defaul hugo.tml

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,5 +1,5 @@
 title = "My Docs"
-baseurl = "./"
+baseurl = "https://aomerge.github.io/SolidCredit/"
 canonifyURLs = false
 disableAliases = true
 disableHugoGeneratorInject = true
