--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "@tabler/icons": "^2.40.0",
     "exec-bin": "^1.0.0",
     "gethyas": "^2.2.2",
-    "hugo-installer": "^4.0.1"
+    "hugo-installer": "^4.0.1",
+    "solid-credit": "^2.0.3"
   },
   "devDependencies": {
     "auto-changelog": "^2.4.0",
